--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,5 +1,17 @@
 @{
-  Views_Shared__Layout = "_Layout";
+  Layout = "_Layout";
 }
 
 @using HairSalon.Models;
+@model List<HairSalon.Models.Stylist>;
+
+<h1>All Stylists:</h1>
+
+<ul>
+  @foreach(Stylist stylist in Model)
+  {
+    <li>@Html.ActionLink($"{stylist.StylistName}", "Details", new { id = stylist.StylistId })</li>
+  }
+</ul>
+
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
