--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -9,7 +9,7 @@
 
 @if (@Model.Count == 0)
 {
-  <h3>No clients have been added.</h3>
+  <h3>No clients have been added</h3>
 }
 
 <ul>
@@ -18,7 +18,15 @@
     <li>@Html.ActionLink($"{client.ClientName}", "Details", new { id = client.ClientId }) | @client.Stylist.StylistName</li>
   }
 </ul>
-
+@if (@ViewBag.StylistId == 0)
+{
+  <h3>Please add a stylist before adding a client</h3>
+  <p>@Html.ActionLink("Add a stylist", "Create", "Stylists")</p>
+}
+else 
+{
 <p>@Html.ActionLink("Add new client", "Create")</p>
+}
+
 <p>@Html.ActionLink("See list of stylists", "Index", "Stylists")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
